# rare-agent-python

./: .coverage  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOSTED_VS_SELF_HOSTED.md  README.md  SECURITY.md  STATUS.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
scripts/: check_english_only.sh
src/rare_agent/: __init__.py  cli.py  client.py  local_signer.py  signer_cli.py
src/rare_agent_sdk/: __init__.py  cli.py  client.py  local_signer.py  signer_cli.py  state.py
src/rare_sdk/: __init__.py  cli.py  client.py  local_signer.py  signer_cli.py  state.py
tests/: _platform_stub.py  conftest.py  test_cli_additional.py  test_client_errors.py  test_local_signer.py  test_sdk.py  test_signer_cli.py
