[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-sdk"
version = "0.1.0"
description = "Python SDK for Rare Identity agent flows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[project.scripts]
rare = "rare_sdk.cli:main"
rare-signer = "rare_sdk.signer_cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "fastapi>=0.115.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rare_sdk*"]
