[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-agent"
version = "0.1.0"
description = "Python SDK and CLI for Rare Agent identity flows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "rare-protocol>=0.1.0",
]

[project.scripts]
rare = "rare_agent.cli:main"
rare-signer = "rare_agent.signer_cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "fastapi>=0.115.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rare_agent*"]
